test/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: docker.io/traefik/whoami:latest
        ports:
        - containerPort: 80
          name: http
        envFrom:
        - configMapRef:
            name: test-config
        env:
        - name: WHOAMI_PORT_NUMBER
          value: "80"
