test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test
spec:
  containers:
  - name: test
    image: docker.io/traefik/whoami:latest
    ports:
    - containerPort: 80
      name: http
    envFrom:
    - configMapRef:
        name: test-config
    env:
    - name: WHOAMI_PORT_NUMBER
      value: "80"
    - name: WHOAMI_NAME
      value: "kanpai"
