test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: test
